--- a/client/one/partials/zem_grid.html
+++ b/client/one/partials/zem_grid.html
@@ -3,18 +3,18 @@
         <!--<div class="loader" ng-show="rows.length && showLoader"></div>-->
 
         <div class="table-container">
-            <table class="table table-hover">
+            <table class="grid table table-hover">
                 <thead>
                     <tr>
-                        <th ng-if="col.shown" ng-repeat="col in dataSource.columns">
+                        <th ng-repeat="col in dataSource.columns">
                             <span class="col-title">{{ col }}</span>
                         </th>
                     </tr>
                 </thead>
                 <tbody>
-                    <tr ng-repeat="row in dataSource.rows">
-                        <td ng-repeat="col in row">
-                            <span>- {{col}} -</span>
+                    <tr ng-repeat="row in dataSource.rows" ng-class="getRowClass(row)">
+                        <td ng-repeat="col in row.data">
+                            <span>{{col}}</span>
                         </td>
                     </tr>
                 </tbody>
