--- a/client/one/less/style.less
+++ b/client/one/less/style.less
@@ -2291,16 +2291,16 @@ table.grid {
     }
 
     tr.level-1{
+        background-color: #F4F4F4;
         td:first-child{
-            //background-color: #dddddd;
-            //padding-left: 30px;
+            padding-left: 20px;
         }
     }
 
     tr.level-2{
+        background-color: #ececec;
         td:first-child{
-            background-color: #f2f2f2;
-            padding-left: 30px;
+            padding-left: 40px;
         }
     }
 
