--- a/client/one/partials/tabset.html
+++ b/client/one/partials/tabset.html
@@ -8,6 +8,6 @@
             </a>
         </tab-heading>
     </tab>
-    <span ng-show="isAdGroupPaused"><span class="little-red-square"></span><span class="warning-paused">This Ad Group is currently not running.</span></span>
-    <span ng-show="!isAdGroupPaused && isCampaignLanding"><span class="little-red-square"></span><span class="warning-paused">Campaign is running in landing mode.</span></span>
+    <span ng-show="isAdGroupPaused()"><span class="little-red-square"></span><span class="warning-paused">This Ad Group is currently not running.</span></span>
+    <span ng-show="isCampaignLanding()"><span class="little-red-square"></span><span class="warning-paused">Campaign is running in landing mode.</span></span>
 </tabset>
