added id's before adgroup names when they are already selected

--- a/client/one/partials/zem_retargeting.html
+++ b/client/one/partials/zem_retargeting.html
@@ -1,7 +1,7 @@
 <div ng-show="selectedAdgroupIds.length" class="multiselect">
     <div class="multiselect-tag" ng-repeat="adgroup in selectedAdgroups()" ng-click="removeSelectedAdgroup(adgroup)">
         <span class="multiselect-tag-name">
-            {{adgroup.name}}
+            {{adgroup.id}}&nbsp;-&nbsp;{{adgroup.name}}
             <img class="remove" ng-src="{{ config.static_url }}/one/img/x_gray.svg" />
         </span>
      </div>
