added a new property with users and refactore how users are fetched

--- a/client/one/less/style.less
+++ b/client/one/less/style.less
@@ -854,7 +854,8 @@ div[datepicker] {
     }
 
     .infobox-body {
-        overflow: hidden;
+        overflow-x: hidden;
+        overflow-y: scroll;
         height: 200px;
     }
 }
