--- a/client/one/less/style.less
+++ b/client/one/less/style.less
@@ -969,6 +969,15 @@ div[datepicker] {
     background-size: 15px 15px;
 }
 
+.infobox-landing-mode-icon {
+    color: @infobox-black;
+    text-align: center;
+    background-image: url('img/adgroup_status_landing_mode.svg');
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: 18px 18px;
+}
+
 .infobox-icon {
     width: 13px;
     height: 13px;
