Refactor API responses - incorporate position and level, indexes are 0 based

--- a/client/one/partials/zem_grid.html
+++ b/client/one/partials/zem_grid.html
@@ -25,7 +25,7 @@
 
                         <td ng-if="row.type==1">
                             <a ng-click="dataSource.fetchMore(row)">
-                                {{row.dataRow.rows.length}} of {{row.dataRow.pagination.size}} (show more)
+                                {{row.dataRow.pagination.size}} of {{row.dataRow.pagination.count}} (show more)
                             </a>
                         </td>
                         <td ng-if="row.type==1" colspan="11">
