--- a/client/one/partials/zem_grid.html
+++ b/client/one/partials/zem_grid.html
@@ -1,41 +1,49 @@
-<div class="zem-table-container">
-    <div class="loader-container">
-        <!--<div class="loader" ng-show="rows.length && showLoader"></div>-->
+<div class="zem-grid-container">
+    <!--- DEBUG PANEL --->
+    <div class="debug-panel" >
+        <span>[DEBUG] Breakdowns: </span>
+        <label ng-repeat="(breakdown, enabled) in DEBUG_BREAKDOWNS">
+            <input type="checkbox" ng-model="DEBUG_BREAKDOWNS[breakdown]">
+            {{breakdown}}
+        </label>
+        <button type="submit" class="btn btn-default" ng-click="DEBUG_APPLY_BREAKDOWN()">Submit</button>
+    </div>
 
-        <div class="table-container">
-            <table class="grid table table-hover">
-                <thead>
-                    <tr>
-                        <th ng-repeat="col in dataSource.columns">
-                            <span class="col-title">{{ col }}</span>
-                        </th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr ng-repeat="row in rows track by $index" ng-if="row.visible" ng-class="getRowClass(row)">
-                        <td ng-if="row.type==0" ng-repeat="col in row.data track by $index">
-
-                            <span ng-if="$index===0 && row.dataRow.breakdown && row.level>0">
-                                <a ng-click="toggleCollapse(row)">
+    <!--- END DEBUG PANEL --->
+    <table class="zem-grid table table-hover">
+        <thead>
+        <tr>
+            <th ng-repeat="col in columns">
+                <span class="col-title">{{ col }}</span>
+            </th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr ng-repeat="row in rows track by $index" ng-if="row.visible" ng-class="getRowClass(row)">
+            <td ng-if="row.type==GridRowType.STATS" ng-repeat="col in row.data.stats track by $index">
+                            <span ng-if="$index===0 && row.data.breakdown && row.level>0">
+                                <a ng-click="toggleCollapse(row)" class="action">
                                     {{row.collapsed ? '[ + ]' : '[ - ]'}}
                                 </a>
                             </span>
-                            <span>{{col}}</span>
-                        </td>
+                <span>{{col}}</span>
+            </td>
 
-                        <td ng-if="row.type==1">
-                            <a ng-click="loadMore(row)">
-                                {{row.dataRow.pagination.size}} of {{row.dataRow.pagination.count}} (show more)
-                            </a>
-                        </td>
-                        <td ng-if="row.type==1" colspan="11">
-                            <a ng-click="loadMore(row)">
-                                 ...
-                            </a>
-                        </td>
-                    </tr>
-                </tbody>
-            </table>
-        </div>
-    </div>
+            <td ng-if="row.type==GridRowType.BREAKDOWN">
+                <a ng-click="loadMore(row)">
+                    - {{row.data.pagination.size}} of {{row.data.pagination.count}} -
+                </a>
+            </td>
+            <td ng-if="row.type==GridRowType.BREAKDOWN" colspan="8">
+                <div ng-if="row.data.pagination.to < row.data.pagination.count">
+                    <a ng-click="loadMore(row, 5)"> (show 5 more) </a>
+                    <a ng-click="loadMore(row, -1)"> (show all) </a>
+                </div>
+                <div ng-if="row.data.pagination.to === row.data.pagination.count">
+                    <a ng-click=""> (show less) </a>
+                </div>
+            </td>
+        </tr>
+        </tbody>
+    </table>
 </div>
