--- a/client/one/partials/zem_grid.html
+++ b/client/one/partials/zem_grid.html
@@ -1,5 +1,6 @@
 <div class="zem-grid-container">
-    <!--- DEBUG PANEL --->
+    <!--- DEBUG PANEL [START] --->
+    <!--- TODO: move to development partial and bind with controller  --->
     <div class="debug-panel" >
         <span>[DEBUG] Breakdowns: </span>
         <label ng-repeat="(breakdown, enabled) in DEBUG_BREAKDOWNS">
@@ -8,8 +9,8 @@
         </label>
         <button type="submit" class="btn btn-default" ng-click="DEBUG_APPLY_BREAKDOWN()">Submit</button>
     </div>
+    <!--- DEBUG PANEL [END] --->
 
-    <!--- END DEBUG PANEL --->
     <table class="zem-grid table table-hover">
         <thead>
         <tr>
