--- a/client/one/partials/main.html
+++ b/client/one/partials/main.html
@@ -2,7 +2,7 @@
     <div class="row header" ng-include src="'/partials/header.html'"></div>
 
     <div class="row body">
-        <div class="sidebar" ng-show="false && accountsAccess.hasAccounts && navigationPaneVisible" ng-class="{'sidebar-new': hasPermission('zemauth.all_new_sidebar') }">
+        <div class="sidebar" ng-show="accountsAccess.hasAccounts && navigationPaneVisible" ng-class="{'sidebar-new': hasPermission('zemauth.all_new_sidebar') }">
             <div class="loader" ng-if="loadSidebarInProgress"></div>
             <div id="nav-new" ng-if="hasPermission('zemauth.all_new_sidebar')">
                 <zem-nav-search zem-current-account="account" zem-all-accounts="accounts" zem-can-access-accounts="{{ canAccessAccounts() }}" zem-can-access-campaigns="{{ canAccessCampaigns() }}" zem-default-account-state="{{ getDefaultAccountState() }}" zem-default-campaign-state="{{ getDefaultCampaignState() }}" zem-show-archived="getShowArchived()" zem-default-ad-group-state="{{ getDefaultAdGroupState() }}"></zem-nav-search>
