Add toggle level support

--- a/client/one/less/style.less
+++ b/client/one/less/style.less
@@ -2251,7 +2251,7 @@ div[datepicker] {
 
     .debug-panel {
         float:left;
-        margin-bottom: 20px;
+        margin: 20px;
         padding: 10px;
         border: 1px solid orange;
 
