Added bigger bottom margin to media sources table to make dropdown menu fully visible.

--- a/client/one/less/style.less
+++ b/client/one/less/style.less
@@ -2798,6 +2798,10 @@ div[datepicker] {
             }
         }
     }
+
+    .table-ad-group-sources & {
+        margin-bottom: 32px;
+    }
 }
 
 .table .dropdown {
