Add directive to fix header and footer

--- a/client/one/less/style.less
+++ b/client/one/less/style.less
@@ -2263,6 +2263,7 @@ div[datepicker] {
 
     table {
         width: 100%;
+        height:500px;
 
         thead {
             background-color: #f6f6f6;
