--- a/client/one/partials/zem_grid.html
+++ b/client/one/partials/zem_grid.html
@@ -17,7 +17,7 @@
     </div>
     <!--- DEBUG PANEL [END] --->
 
-    <table class="zem-grid table table-hover">
+    <table zem-grid-fixed-header class="zem-grid table table-hover">
         <thead>
         <tr>
             <th ng-repeat="col in header.columns">
@@ -59,5 +59,5 @@
             </th>
         </tr>
         </tfoot>
-    </table>
+    </table></div>
 </div>
