fixing codeclimate issues

--- a/client/one/less/style.less
+++ b/client/one/less/style.less
@@ -3734,11 +3734,11 @@ select.media-source-select {
         width: 12px;
         height: 12px;
         
-        &.zem-icon-remove-new {
+        &.zem-icon-remove {
             width: 10px;
             height: 10px;
         }
-        &.zem-icon-buttons-plus-new {
+        &.zem-icon-buttons-plus {
             width: 10px;
             height: 10px;
             display: inline-block;
