--- a/client/one/partials/zem_campaign_goals.html
+++ b/client/one/partials/zem_campaign_goals.html
@@ -25,14 +25,14 @@
         <div class="campaign-goal-edit col-xs-1" ng-click="editGoal(goal)">
             <div class="center-area">
                 <div class="centered">
-					<zem-icon name="edit-new" title="Edit"></zem-icon>
+					<zem-icon img-class="zem-icon-edit" file="edit-new.svg" title="Edit"></zem-icon>
                 </div>
             </div>
         </div>
         <div class="campaign-goal-delete col-xs-1" ng-click="deleteGoal(goal)">
             <div class="center-area">
                 <div class="centered">
-					<zem-icon name="remove-new" title="Remove"></zem-icon>
+					<zem-icon img-class="zem-icon-remove" file="remove-new.svg" title="Remove"></zem-icon>
                 </div>
             </div>
         </div>
@@ -40,7 +40,7 @@
     <div class="row">
         <div class="col-xs-5 nopadding">
             <button type="button" class="btn btn-default" ng-click="addGoal()">
-                <span class="plus-sign"><zem-icon name="buttons-plus-new"></zem-icon></span>
+                <span class="plus-sign"><zem-icon img-class="zem-icon-buttons-plus" file="buttons-plus-new.svg"></zem-icon></span>
                 <span class="plus-label">Add new goal</span>
             </button>
         </div>
