--- a/client/one/partials/zem_grid.html
+++ b/client/one/partials/zem_grid.html
@@ -1,6 +1,6 @@
 <div class="zem-grid-container">
-    <!--- DEBUG PANEL [START] --->
-    <!--- TODO: move to development partial and bind with controller  --->
+    <!-- DEBUG PANEL [START] -->
+    <!-- TODO: move to development partial and bind with controller  -->
     <div class="debug-panel">
         <span>[DEBUG] Breakdowns : </span>
         <label ng-repeat="(breakdown, enabled) in DEBUG_BREAKDOWNS">
@@ -15,7 +15,7 @@
         <button type="submit" class="btn btn-default" ng-click="toggleCollapseLevel(2)">Toggle Level 2</button>
         <button type="submit" class="btn btn-default" ng-click="toggleCollapseLevel(3)">Toggle Level 3</button>
     </div>
-    <!--- DEBUG PANEL [END] --->
+    <!-- DEBUG PANEL [END] -->
 
     <table zem-grid-fixed-header class="zem-grid table table-hover">
         <thead>
