--- a/client/one/partials/edit_campaign_goal_modal.html
+++ b/client/one/partials/edit_campaign_goal_modal.html
@@ -138,7 +138,7 @@
 
         <div class="form-group">
             <div class="col-xs-4" ng-if="!showAddConversionGoalForm()">
-                <button type="submit" class="btn btn-add" ng-click="clearError()" ng-class="{'disabled': !!addConversionGoalInProgress}">
+                <button type="submit" class="btn btn-add" ng-click="clearError()" ng-class="{'disabled': !!addConversionGoalInProgress || !campaignGoal.type}">
                     <span ng-if="newCampaignGoal">Add goal</span>
                     <span ng-if="!newCampaignGoal">Save goal</span>
                 </button>
